Added option for exit a Game; Added new test for MenuController